--- a/schoolfgcu.html
+++ b/schoolfgcu.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- Page Content -->
-    <div class="wil-padding-large wil-text-purple" id="main">
+    <div class="wil-padding-large" id="main">
         <!-- Header/Home -->
         <header class="wil-container wil-padding-32 wil-center wil-black" id="home">
             <h1 class="wil-jumbo"><span class="wil-hide-small">I'm</span> William-Andrew.</h1>
@@ -51,8 +51,8 @@
             </script>
         </div>
         <!-- About Section -->
-        <div class="wil-content wil-justify wil-text-purple wil-padding-64" id="about">
-            <h2 class="wil-text-purple">William-Andrew Smith</h2>
+        <div class="wil-content wil-justify wil-padding-64" id="about">
+            <h2>William-Andrew Smith</h2>
             <hr class="wil-opacity" style="width:200px">
             <h3>About Me</h3>
             <p>I am first and foremost a Human, a Jamaican and a Student (in that order).I have intermediate knowledge of programming but I am honestly rusty.I have practical work experience but in the field of Biochemistry rather that Software Engineering.
@@ -84,7 +84,7 @@
     <!-- End About Section -->
     <!-- Portfolio Section -->
     <div class="wil-padding-64 wil-content" id="projects">
-        <h2 class="wil-text-purple">My PROJECTS</h2>
+        <h2>My PROJECTS</h2>
         <hr class="wil-opacity" style="width:200px">
         <!-- Grid for projects -->
         <div class="wil-row-padding" style="margin:auto">
