--- a/schoolfgcu.html
+++ b/schoolfgcu.html
@@ -51,7 +51,7 @@
             </script>
         </div>
         <!-- About Section -->
-        <div class="wil-content wil-justify wil-padding-64" id="about">
+        <div class="wil-content wil-padding-64" id="about">
             <h2>William-Andrew Smith</h2>
             <hr class="wil-opacity" style="width:200px">
             <h3>About Me</h3>
