--- a/schoolfgcu.html
+++ b/schoolfgcu.html
@@ -91,8 +91,8 @@
             <div class="wil-grid wil-purple wil-text-white">
                 <div>
                     <div>
-                        <h2>Welcome!</h2>Name: <input id="myText" name="fname" type="text" value="Mickey"><br>
-   			<label for="fname">name:</label>
+                        <h2>Welcome!</h2>
+   			<label for="myText">Name:</label>
                         <input id="myText" name="fname" type="text" value="Mickey"><br>
                         <p>Click the button to recieve your welcome.</p><button onclick="nameFunc()">Try it</button>
                         <p id="henge"></p>
@@ -106,9 +106,9 @@
                           <label for="txtTemp">Convert Temperature here:</label>
                             <input id="txtTemp" name="txtTemp" placeholder="Enter a Temperature" type="text" value=""><br>
                             <br>
-                            <input name="radTemp" type="radio" value="FC"><labe0l for="radTemp">Fahrenheit to Celcius</label><br>
+                            <input id="radTemp" name="radTemp" type="radio" value="FC"><labe0l for="radTemp">Fahrenheit to Celcius</label><br>
                             <br>
-                            <input name="radTemp" type="radio" value="CF"><label for="">Celcius to Fahrenheit</label><br>
+                            <input id-"radTemp2" name="radTemp" type="radio" value="CF"><label for="radTemp2">Celcius to Fahrenheit</label><br>
                             <br>
                         </form><br>
                         <br>
@@ -125,9 +125,9 @@
                           <label for="txtRom">Convert Here:</label>
                             <input id="txtRom" name="txtRom" placeholder="Enter a Number" type="text" value=""><br>
                             <br>
-                            <input name="radRom" type="radio" value="to"><label for="radRom">Arabic# to Roman#</label><br>
+                            <input id="radRom" name="radRom" type="radio" value="to"><label for="radRom">Arabic# to Roman#</label><br>
                             <br>
-                            <input name="radRom" type="radio" value="from"><label for="radRom">Roman# to Arabic#</label><br>
+                            <input id="radRom2" name="radRom" type="radio" value="from"><label for="radRom2">Roman# to Arabic#</label><br>
                             <br>
                         </form><br>
                         <br>
