--- a/schoolfgcu.html
+++ b/schoolfgcu.html
@@ -106,9 +106,9 @@
                           <label for="txtTemp">Convert Temperature here:</label>
                             <input id="txtTemp" name="txtTemp" placeholder="Enter a Temperature" type="text" value=""><br>
                             <br>
-                            <input id="radTemp" name="radTemp" type="radio" value="FC"><labe0l for="radTemp">Fahrenheit to Celcius</label><br>
+                            <input id="radTemp" name="radTemp" type="radio" value="FC"><label for="radTemp">Fahrenheit to Celcius</label><br>
                             <br>
-                            <input id-"radTemp2" name="radTemp" type="radio" value="CF"><label for="radTemp2">Celcius to Fahrenheit</label><br>
+                            <input id-"radTemp2" name="radTemp2" type="radio" value="CF"><label for="radTemp2">Celcius to Fahrenheit</label><br>
                             <br>
                         </form><br>
                         <br>
