--- a/schoolfgcu.html
+++ b/schoolfgcu.html
@@ -59,7 +59,7 @@
                 Please see this link for my linked in<br> https://www.linkedin.com/in/william-andrew-smith-726244156/
             </p>
             <h3>First Impressions</h3>
-            <p>When I came to the US earlier this/ year I had no idea what to expect. I had heard so much about the general situation since the last election and honestly, I was scared. To tell the truth I have been here before but that was California (a
+            <p>When I came to the US earlier this year I had no idea what to expect. I had heard so much about the general situation since the last election and honestly, I was scared. To tell the truth I have been here before but that was California (a
                 whole other country really), to my pleasant surprise I have found the states very accommodating and I have kind of fallen in love with this country. I was born in a tropical paradise but I find here several times more beautiful than the
                 eden I left behind.</p>
             <h3>Field Report</h3>
@@ -108,7 +108,7 @@
                             <br>
                             <input id="radTemp" name="radTemp" type="radio" value="FC"><label for="radTemp">Fahrenheit to Celcius</label><br>
                             <br>
-                            <input id-"radTemp2" name="radTemp2" type="radio" value="CF"><label for="radTemp2">Celcius to Fahrenheit</label><br>
+                            <input id="radTemp2" name="radTemp" type="radio" value="CF"><label for="radTemp2">Celcius to Fahrenheit</label><br>
                             <br>
                         </form><br>
                         <br>
